# murchace

./: Dockerfile  dodo.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: CI.yaml  devcontainer.yaml  prodcontainer.yaml
app/: bc.py  components.py  input.css  main.py
app/routers/: orders.py  products.py  register.py  stat.py
app/store/: __init__.py  base.py  order.py  ordered_item.py  product.py
db/: env.py
db/versions/: 74640061af2b_init_base_revision.py
docs/: architecture.md  readme.md  style.md
static/: datastar-1-0-0-beta-11-451cf4728ff6863d.json  datastar.js  styles.css  styles.min.css
tasks/: tailwindcss.py  task_dict.py
