[project]
name = "murchace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "databases[aiosqlite]>=0.9.0",
    "sqlmodel>=0.0.24",
    "doit>=0.36.0",
    "alembic>=1.15.2",
    "datastar-py>=0.4.3",
    "htpy>=25.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["/app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "inline-snapshot>=0.14.0",
    "pyright>=1.1.389",
    "ruff>=0.8.1",
    "djlint>=1.36.2",
    "sqlparse>=0.5.2",
]

[tool.doit]
backend = "sqlite3"
dep_file = ".doit.db"

[tool.doit.commands.list]
status = true
subtasks = true
sort = "definition"

[tool.ruff]

[tool.pyright]
