[project]
name = "murchace"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.0",
    "uvicorn[standard]>=0.38.0",
    "python-multipart>=0.0.20",
    "databases[aiosqlite]>=0.9.0",
    "doit>=0.36.0",
    "alembic>=1.17.0",
    "datastar-py>=0.6.5",
    "htpy>=25.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "inline-snapshot>=0.30.1",
    "pyright>=1.1.407",
    "ruff>=0.14.2",
    "sqlparse>=0.5.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["/app"]

[tool.doit]
backend = "sqlite3"
dep_file = ".doit.db"

[tool.doit.commands.list]
status = true
subtasks = true
sort = "definition"

[tool.ruff]

[tool.pyright]
